--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "An's homepage"
 title_separator          : "-"
 name                     : &name "An Yan"
 description              : &description "PhD student at UC San Diego"
-url                      : https://yan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zzxslp.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zzxslp/yan.github.io"
+repository               : "zzxslp.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
