Update links. Delete local html.

--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/zzxslp"
+  github           : "zzxslp"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/an-yan-990987113/
+  linkedin         : "an-yan-990987113"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
