--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@ main:
   # - title: "Publications"
   #   url: /publications/
     
-  - title: "CV"
-    url: /files/CV.pdf
+  - title: "Resume"
+    url: /files/resume.pdf
     
